--- a/composer.json
+++ b/composer.json
@@ -14,5 +14,8 @@
     },
     "require": {
         "robmorgan/phinx": "^0.11.1"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8.3"
     }
 }
