--- a/composer.json
+++ b/composer.json
@@ -16,6 +16,7 @@
         "robmorgan/phinx": "^0.11.1"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.3"
+        "phpunit/phpunit": "^8.3",
+        "jc21/clitable": "^1.2"
     }
 }
