--- a/composer.json
+++ b/composer.json
@@ -13,7 +13,9 @@
         }
     },
     "require": {
-        "robmorgan/phinx": "^0.11.1"
+        "robmorgan/phinx": "^0.11.1",
+        "ramsey/uuid": "^3.8",
+        "twig/twig": "^2.11"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3",
