--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,8 @@
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3",
-        "jc21/clitable": "^1.2"
+        "jc21/clitable": "^1.2",
+        "vimeo/psalm": "^3.4",
+        "phpstan/phpstan": "^0.11.15"
     }
 }
