--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
     "require": {
         "robmorgan/phinx": "^0.11.1",
         "ramsey/uuid": "^3.8",
-        "twig/twig": "^2.11"
+        "twig/twig": "^2.11",
+        "vlucas/phpdotenv": "^3.5"
     },
     "require-dev": {
         "phpunit/phpunit": "^8.3",
