--- a/composer.json
+++ b/composer.json
@@ -16,10 +16,11 @@
         "robmorgan/phinx": "^0.11.1",
         "ramsey/uuid": "^3.8",
         "twig/twig": "^2.11",
-        "vlucas/phpdotenv": "^3.5"
+        "vlucas/phpdotenv": "^3.5",
+        "jenssegers/blade": "^1.2"
     },
     "require-dev": {
-        "phpunit/phpunit": "^8.3",
+        "phpunit/phpunit": "^7",
         "jc21/clitable": "^1.2",
         "vimeo/psalm": "^3.4",
         "phpstan/phpstan": "^0.11.15",
