--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,10 @@
 {
-    "name": "vagrant/innogames",
+    "name": "vagrant/horseracing",
     "description": "Horse racing simulator",
     "authors": [
         {
             "name": "Michael Dymecki",
-            "email": "michal.dymeci@gmail.com"
+            "email": "michal.dymecki@gmail.com"
         }
     ],
     "autoload": {
@@ -17,7 +17,9 @@
         "ramsey/uuid": "^3.8",
         "twig/twig": "^2.11",
         "vlucas/phpdotenv": "^3.5",
-        "jenssegers/blade": "^1.2"
+        "jenssegers/blade": "^1.2",
+        "ext-pdo": "*",
+        "ext-json": "*"
     },
     "require-dev": {
         "phpunit/phpunit": "^7",
