--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,8 @@
         "vlucas/phpdotenv": "^3.5",
         "jenssegers/blade": "^1.2",
         "ext-pdo": "*",
-        "ext-json": "*"
+        "ext-json": "*",
+        "monolog/monolog": "^2.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^7",
